samples/_failures_safe/1761502772_51138a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_137858ef.c: In function ‘main’:
./samples/SAFE/__tmp_137858ef.c:147:20: error: missing terminating " character
  147 |             printf("Invalid edge parameters
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_137858ef.c:147:13: error: expected expression at end of input
  147 |             printf("Invalid edge parameters
      |             ^~~~~~
./samples/SAFE/__tmp_137858ef.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_137858ef.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_137858ef.c:147:13: error: expected declaration or statement at end of input
